Company now updates as well as creates

--- a/templates/site/company_list.html
+++ b/templates/site/company_list.html
@@ -9,7 +9,7 @@
 
 {% for item in items %}
 <div class="row no-gutters">
-    <div class="col-md-1">{{ item._id }}</div>
+    <div class="col-md-1 col-offset-3">{{ item._id }}</div>
     <div class="col-md-6">
         <a href="{{ url_for('company_edit',company_id=item._id) }}">{{ item.name }}</a>
     </div>
