Client create/edit added

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -4,7 +4,7 @@
             aria-expanded="false">Company</a>
         <div class="dropdown-menu">
             <a class="dropdown-item" href="{{ url_for('company_list') }}">Company Info</a>
-            <a class="dropdown-item" href="#">Clients</a>
+            <a class="dropdown-item" href="{{ url_for('client_list') }}">Clients</a>
         </div>
     </li>
     <li class="nav-item dropdown">
