--- a/templates/menu.html
+++ b/templates/menu.html
@@ -11,7 +11,7 @@
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
                 aria-expanded="false">Control</a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Sequence</a>
+                <a class="dropdown-item" href="{{ url_for('control_edit')}}">Sequence</a>
             </div>
         </li>
         <li class="nav-item dropdown">
