Implemented logic to view invoice as a pdf

--- a/templates/invoice/list.html
+++ b/templates/invoice/list.html
@@ -38,6 +38,9 @@
     <div class="col-md-1">
         <a href="{{ url_for('invoice_edit',invoice_id=item._id) }}">Edit</a>
     </div>
+    <div class="col-md-1">
+        <a href="{{ url_for('invoice_view',invoice_id=item._id) }}">View</a>
+    </div>    
 </div>
 {% endfor %}
 {% endblock %}
