Invoice view now allows viewing in html as well as pdf.\nCompany and payee are also passed in as variables

--- a/templates/invoice/list.html
+++ b/templates/invoice/list.html
@@ -39,8 +39,11 @@
         <a href="{{ url_for('invoice_edit',invoice_id=item._id) }}">Edit</a>
     </div>
     <div class="col-md-1">
-        <a href="{{ url_for('invoice_view',invoice_id=item._id) }}">View</a>
-    </div>    
+        <a href="{{ url_for('invoice_view',invoice_id=item._id,action='view') }}">View</a>
+    </div>
+    <div class="col-md-1">
+        <a href="{{ url_for('invoice_view',invoice_id=item._id,action='print') }}">Print</a>
+    </div>      
 </div>
 {% endfor %}
 {% endblock %}
