--- a/templates/invoice/list.html
+++ b/templates/invoice/list.html
@@ -6,9 +6,9 @@
         <h2>Invoice Listing</h2>
     </div>
     <div class="col-md-4 text-right">
-        <a href="{{ url_for('invoice_create')}}">
-            <h2>New invoice</h2>
-        </a>
+        <form action={{ url_for('invoice_create')}} method="GET">
+            <button type="submit" class="btn btn-lg btn-primary">New Invoice</button>
+        </form>
     </div>
 </div>
 
