Added feature to reopen a closed invoice

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
 
 <body>
     <div class="container">
-        <div class="shadow mb-3 mt-2 alert-primary p-3">
+        <div class="shadow mb-3 mt-2 alert-primary p-3 sticky-top d-md-block">
             <h1>Contractor</h1>
             {% include 'menu.html' %}    
         </div>
