--- a/templates/invoice/list.html
+++ b/templates/invoice/list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="row no-gutters">
+<div class="row no-gutters mb-2">
     <div class="col-md-8">
         <h2>Invoice Listing</h2>
     </div>
