Set hours and amounts as floats instead of int or string

--- a/templates/site/contact.html
+++ b/templates/site/contact.html
@@ -89,10 +89,10 @@
         <div class="row no-gutters mt-2">
             <div class="col-md-12 text-right">
                 {% if action == 'edit' %}
-                <button type="submit" name="delete" class="btn-primary btn-lg mr-2">Delete</button>
+                <button type="submit" name="delete" class="btn-danger btn-lg mr-2">Delete</button>
                 {% endif %}
-                <button type="submit" name="cancel" class="btn-primary btn-lg mr-2">Cancel</button>
-                <button type="submit" name="submit" class="btn-primary btn-lg">Submit</button>
+                <button type="submit" name="cancel" class="btn-secondary btn-lg mr-2">Cancel</button>
+                <button type="submit" name="submit" class="btn-success btn-lg">Submit</button>
             </div>
         </div>
 
