--- a/templates/invoice/view.html
+++ b/templates/invoice/view.html
@@ -109,7 +109,7 @@
 
         <div style="width: 100%; height: 2em;" class="header"></div>
 
-        <table>
+        <table style="width: 99%;">
             {% for ts in invoice.detail %}
             <tr>
                 <td>{{ ts.date|oconv_date }}</td>
@@ -117,6 +117,18 @@
                 <td class="text-right">{{ ts.hours }}</td>
             </tr>
             {% endfor %}
+            <tr>
+                <td colspan="2" style="text-align: right;border-top: thin solid black;">Total hours</td>
+                <td style="text-align: right; border-top: thin solid black;">{{ '%3.2f'|format(invoice.hours) }}</td>
+            </tr>
+            <tr>
+                <td colspan="2" style="text-align: right;">Rate</td>
+                <td style="text-align: right;">50.00</td>
+            </tr>        
+            <tr>
+                <td colspan="2" style="text-align: right;">Invoice Total</td>
+                <td style="text-align: right;">{{ '%5.2f'|format(invoice.amount) }}</td>
+            </tr>                
         </table>
         {% if action == 'view' %}
         <div class="mt-2 text-right">
