--- a/templates/invoice/edit.html
+++ b/templates/invoice/edit.html
@@ -36,9 +36,9 @@
 <div class="row no-gutters mt-2 text-right"></div>
     <a class="btn btn-primary" role="button" href="{{ url_for('invoice_list')}}">Return to list</a>
 {% if invoice.status == 'open' %}
-    <a class="btn btn-warning" role="button" href="{{ url_for('invoice_post', invoice_id=invoice._id)}}">Mark as posted</a>
-{% elif invoice.status =='posted' %}
     <a class="btn btn-success" role="button" href="{{ url_for('invoice_close', invoice_id=invoice._id)}}">Close this invoice</a>
+{% elif invoice.status =='closed' %}
+    <a class="btn btn-warning" role="button" href="{{ url_for('invoice_post', invoice_id=invoice._id)}}">Post payment</a>    
 {% else %}
     <a class="btn btn-info" role="button" href="{{ url_for('invoice_open', invoice_id=invoice._id)}}">Reopen this invoice</a>
 {% endif %}
