Fixed format of date fields in invoice edit/post/close

--- a/templates/invoice/close.html
+++ b/templates/invoice/close.html
@@ -20,7 +20,7 @@
     <div class="row mt-3">
         <div class="col-md-2">Close date:</div>
         <div class="col-md-1">
-            <input type="text" size="10" id="datepicker" name="date" value="{{ invoice.close_date }}">
+            <input type="text" size="10" id="datepicker" name="date" value="{{ invoice.close_date.strftime('%m/%d/%Y') }}">
         </div>
     </div>
     <div class="row mt-3">
