Now supports 'sent' indicator for invoices.  Made logo in header a link to the invoice list

--- a/static/styles.css
+++ b/static/styles.css
@@ -7,3 +7,9 @@
 .number {
     text-align: right;
 }
+
+a.logo:link, a.logo:visited, a.logo:hover, a.logo:active {
+    color: black;
+    text-decoration: none;
+    background: transparent;
+}
