--- a/templates/invoice/edit.html
+++ b/templates/invoice/edit.html
@@ -7,7 +7,8 @@
         <h2>Invoice Edit</h2>
     </div>
     <div class="col-md-1 text-right">
-        <h2><a class="btn btn-success" role="button" href="{{ url_for('timesheet_entry',invoice_id=invoice._id) }}">Add time</a></h2>
+        <h2><a class="btn btn-success" role="button" href="{{ url_for('timesheet_entry',invoice_id=invoice._id) }}">Add
+                time</a></h2>
     </div>
 </div>
 
@@ -33,15 +34,23 @@
 </div>
 {% endfor %}
 
-<div class="row no-gutters mt-2 text-right"></div>
-    <a class="btn btn-primary" role="button" href="{{ url_for('invoice_list')}}">Return to list</a>
-{% if invoice.status == 'open' %}
-    <a class="btn btn-success" role="button" href="{{ url_for('invoice_close', invoice_id=invoice._id)}}">Close this invoice</a>
-{% elif invoice.status =='closed' %}
-    <a class="btn btn-warning" role="button" href="{{ url_for('invoice_post', invoice_id=invoice._id)}}">Post payment</a>    
-{% else %}
-    <a class="btn btn-info" role="button" href="{{ url_for('invoice_open', invoice_id=invoice._id)}}">Reopen this invoice</a>
+<div class="row no-gutters mt-2 text-right">
+<a class="btn btn-primary mr-2" role="button" href="{{ url_for('invoice_list')}}">Return to list</a>
+{% if invoice.sent == '' %}
+<form action="{{ url_for('invoice_post', invoice_id=invoice._id) }}" method="POST">
+    <button type="submit" name="sent" class="btn btn-info mr-2">Mark as sent</button>
+</form>
 {% endif %}
+{% if invoice.status == 'open' %}
+<a class="btn btn-success mr-2" role="button" href="{{ url_for('invoice_close', invoice_id=invoice._id)}}">Close this
+    invoice</a>
+{% elif invoice.status =='closed' %}
+<a class="btn btn-warning mr-2" role="button" href="{{ url_for('invoice_post', invoice_id=invoice._id)}}">Post payment</a>
+{% else %}
+<a class="btn btn-info" role="button" href="{{ url_for('invoice_open', invoice_id=invoice._id)}}">Reopen this
+    invoice</a>
+{% endif %}
+
 </div>
 
 {% endblock %}
