--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
-    
+
     <!-- local styles -->
     <link href="/static/styles.css" rel="stylesheet">
 
@@ -25,18 +25,19 @@
 
     <script>
         $(function () {
-            $( '#datepicker' ).datepicker();
-            $( "#menu" ).menu();
+            $('#datepicker').datepicker();
+            $("#menu").menu();
         });
     </script>
-    
+
 </head>
 
 <body>
     <div class="container">
+
         <div class="shadow mb-3 mt-2 alert-primary p-3 sticky-top d-md-block">
-            <h1>Contractor</h1>
-            {% include 'menu.html' %}    
+            <h1><a href="{{ url_for('invoice_list') }}" class="logo">Contractor</h1></a>
+            {% include 'menu.html' %}
         </div>
         {% block content %}
         {% endblock %}
