Application now has an invoice query by date range

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,7 @@
     <script>
         $(function () {
             $('#datepicker').datepicker();
+            $('#datepicker2').datepicker();
             $("#menu").menu();
         });
     </script>
