--- a/templates/menu.html
+++ b/templates/menu.html
@@ -25,7 +25,7 @@
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
                 aria-expanded="false">Reports</a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Invoices</a>
+                <a class="dropdown-item" href="{{ url_for('get_report') }}">Invoices</a>
             </div>
         </li>
     </ul>
