Fixed spacing in invoice edit header

--- a/templates/invoice/edit.html
+++ b/templates/invoice/edit.html
@@ -15,9 +15,9 @@
 <div class="row no-gutters">
     <div class="col-md-1 alert-primary">{{ invoice.date.strftime('%m/%d/%Y') }}</div>
     <div class="col-md-4 alert-primary">Invoice: {{ invoice._id }}</div>
-    <div class="col-md-4 alert-primary">Status: {{ invoice.status }}</div>
-    <div class="col-md-2 alert-primary text-right">Amount: ${{ invoice.amount }}</div>
-    <div class="col-md-1 alert-primary text-right">Hours: {{ invoice.hours }}</div>
+    <div class="col-md-3 alert-primary">Status: {{ invoice.status }}</div>
+    <div class="col-md-2 alert-primary text-right">Amount: ${{ '%5.2f'|format(invoice.amount) }}</div>
+    <div class="col-md-2 alert-primary text-right">Hours: {{ '%5.2f'|format(invoice.hours) }}</div>
 </div>
 
 {% for ts in invoice.detail %}
